--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 install:
   - pip install numpy coverage
 
-script:
+script: coverage run -m unittest discover
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -f .coverage || echo "Codecov did not collect coverage reports"
