--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install:
   - pip install numpy coverage
 
-script: coverage run -m unittest discover
+script:
+  - coverage run -m unittest discover
+  - coverage xml
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -f .coverage || echo "Codecov did not collect coverage reports"
+  - bash <(curl -s https://codecov.io/bash) -f coverage.xml || echo "Codecov did not collect coverage reports"
