--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,5 @@
 steps:
-- uses: actions/checkout@main
+# - uses: actions/checkout@main
 - uses: codecov/codecov-action@v2
   with:
     flags: unittests # optional
